--- a/_static/sass/screen.scss
+++ b/_static/sass/screen.scss
@@ -402,11 +402,10 @@ html[color-mode="dark"] {
   span {
     clip: rect(0 0 0 0); 
     clip-path: inset(50%);
-    height: 1px;
     overflow: hidden;
     position: absolute;
     white-space: nowrap; 
-    width: 1px;
+    display: none;
   }
 }
 
